BUGFIX: Footer links on iOS don't  overlap anymore.

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -127,9 +127,9 @@
 
 
 .social-media-list {
-  display: flex;
+  display: inline-flex;
   flex-flow: row nowrap;
-  align-items: center;
+  align-items: left;
   justify-content: space-between;
 
   a svg[id^=social] {
